--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.star.myapplication">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
@@ -12,13 +14,11 @@
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashTheme">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -27,11 +27,25 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".JoinActivity" android:label="JoinActivity" />
-        <activity android:name=".MainActivity" android:label="MainActivity" />
-        <activity android:name=".ReviewActivity" android:label="ReviewActivity" />
-        <activity android:name=".AddActivity" android:label="AddActivity" />
-        <activity android:name=".SearchActivity" android:label="SearchActivity" />
+        <activity
+            android:name=".JoinActivity"
+            android:label="JoinActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="MainActivity" />
+        <activity
+            android:name=".ReviewActivity"
+            android:label="ReviewActivity" />
+        <activity
+            android:name=".AddActivity"
+            android:label="AddActivity" />
+        <activity
+            android:name=".SearchActivity"
+            android:label="SearchActivity" />
+        <activity
+            android:name=".TestActivity"
+            android:label=""
+            android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
     </application>
 
 </manifest>
