상세조회 액티비티 연동
사진, 설명 제외

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,7 +56,7 @@
             android:name=".MainActivity"
             android:label="MainActivity" />
         <activity
-            android:name=".ReviewActivity"
+            android:name=".DetailActivity"
             android:label="ReviewActivity" />
         <activity
             android:name=".AddActivity"
