현재 시간으로 알람설정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,7 @@
             android:name=".TestActivity"
             android:label=""
             android:theme="@style/Theme.AppCompat.NoActionBar"></activity>
+        <receiver android:name=".Receiver"></receiver>
     </application>
 
 </manifest>
