리뷰 액티비티 프래그먼트 UI 구성

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
             android:name=".JoinActivity"
             android:label="JoinActivity" />
         <activity
+            android:name=".ReviewActivity"
+            android:theme="@style/AppTheme"
+            android:label="리뷰 작성" />
+        <activity
             android:name=".DetailActivity"
             android:label="ReviewActivity" />
         <activity
